# molt-cli-c

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/agents/: product-manager.md  software-architect.md  software-developer.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: architecture.md  building.md  feishu-setup.md  openclaw-setup.md  wsl-quickstart.md
src/: cast_parser.rs  config.rs  history.rs  main.rs  pipeline.rs  session.rs
src/ai/: direct_llm.rs  feishu_bot.rs  mod.rs
src/backends/: direct_llm.rs  mod.rs
src/backends/feishu/: client.rs  executor.rs  extractor.rs  mod.rs
src/commands/: list.rs  mark.rs  mod.rs  recap.rs  record.rs  run.rs  run_pipeline.rs  stats.rs  stop.rs
src/pipeline/: mod.rs  schema.rs  store.rs
src/recording/: cast.rs  cast_writer.rs  mod.rs  pty_session.rs  stats.rs  virtual_screen.rs
